# tapf-monad-examples

./: README.md  tapf-monad-examples.cabal
src/TAPF/: Coins.hs  Eval0.hs  Eval1.hs  Eval2.hs  Eval3.hs  Eval4.hs  Eval5.hs  Eval6.hs  Labelling.hs  Puzzle.hs
