name:                tapf-monad-examples
version:             0.1.0.0
synopsis:            Examples for programing with state, maybe and list monads
homepage:            https://github.com/pbv/tapf-monad-examples.git
license:             BSD3
license-file:        LICENSE
author:              Pedro Vasconcelos
maintainer:          pbv@dcc.fc.up.pt
copyright:           2017 Pedro Vasconcelos
category:            Teaching
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TAPF.Labelling
                       TAPF.Coins
                       TAPF.Puzzle
  build-depends:       base >= 4.7 && < 5, 
                       mtl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pbv/tapf-monad-examples
