cabal-version:       3.0
name:                tapf-monad-examples
version:             0.3.0.0
synopsis:            Examples for programing with state, maybe and list monads
homepage:            https://github.com/pbv/tapf-monad-examples.git
license:             MIT
license-file:        LICENSE
author:              Pedro Vasconcelos
maintainer:          pbvascon@fc.up.pt
copyright:           2026 Pedro Vasconcelos
category:            Teaching
build-type:          Simple
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     TAPF.Labelling
                       TAPF.Coins
                       TAPF.Puzzle
                       TAPF.Eval0
                       TAPF.Eval1
                       TAPF.Eval2
                       TAPF.Eval3
                       TAPF.Eval4
                       TAPF.Eval5
  build-depends:       base >= 4.7 && < 5, containers, mtl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pbv/tapf-monad-examples
